// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render RequestsModal component should match snapshot 1`] = `
<form
  className="editor__editor-form"
  id="form-id"
  onSubmit={[Function]}
>
  <Editor
    init={
      Object {
        "branding": false,
        "menubar": false,
        "plugins": "lists",
        "skin": "lightgray",
        "statusbar": false,
        "toolbar": "bold italic underline   numlist bullist   outdent indent",
      }
    }
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="editor__btn-size"
  >
    <span
      className="editor__btn-wrap"
    >
      <button
        className="editor__post-btn editor__post-btn post-btn-text"
        type="submit"
      >
        Post
      </button>
    </span>
  </div>
</form>
`;

exports[`Render RequestsModal component should render the onSubmit button works as exepected 1`] = `
<form
  className="editor__editor-form"
  id="form-id"
  onSubmit={[Function]}
>
  <textarea
    id="tiny-react_73232948541535374720000"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    className="editor__btn-size"
  >
    <span
      className="editor__btn-wrap"
    >
      <button
        className="editor__post-btn editor__post-btn post-btn-text"
        type="submit"
      >
        Post
      </button>
    </span>
  </div>
</form>
`;
